--- a/store/templates/store/unitissue_report.html
+++ b/store/templates/store/unitissue_report.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
-    <a href="{%url 'unitissue_report' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>    
+    <a href="{%url 'unit_bulk_locker' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>    
 <h1 class="text-lg text-blue-800 text-center uppercase">{{unit.name}} Bulk Locker Report</h1>
 </span>
 <div class="max-w-7xl mx-auto px-4 ">
@@ -75,6 +75,7 @@
                         <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">TRADE NAME</th>
                         <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
                         <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">ISSUED TO</th>
                         <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">ISSUED BY</th>
                     </tr>
                 </thead>
@@ -89,6 +90,7 @@
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.drug.trade_name|default_if_none:'N/A'|upper }} </td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.drug.supplier|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.quantity|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.issued_to|default_if_none:unit }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.issued_by|default_if_none:'N/A' }}</td>
                     </tr>
                     {% empty %}
