unit worth, seperated from store, more security deployed

--- a/store/templates/store/create_item.html
+++ b/store/templates/store/create_item.html
@@ -7,7 +7,7 @@
             <span class="flex justify-center p-1 gap-4 text-sm text-white">
                 <a href="{% url 'list' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
             <h1 class="text-sm text-center  uppercase">
-                Add a New Drug to the Store
+                Drug Form
             </h1>
             </span>
         </div>
