--- a/store/templates/403.html
+++ b/store/templates/403.html
@@ -2,7 +2,7 @@
 {% block title %}ACCESS DENIED{% endblock %}
 {% load static %}
 {% block content %}
-    <div class="container shadow-2xl mx-auto bg-white p-20 rounded-xl text-center w-fit mt-10">
+    <div class="container shadow-2xl mx-auto bg-white p-16 rounded-xl text-center w-fit mt-10">
         <i class="fa-solid fa-lock fa-10x text-red-600 p-4"></i>
     <p class=" text-red-600 font-bold text-2xl uppercase text-center">
       ACCESS DENIED! 
@@ -11,10 +11,10 @@
       {{request.user}},
     </p>
     <p class="text-sm font-semibold m-4 border-b-2 border-zinc-700">
-        YOU DO NOT HAVE PERMISSION TO VIEW THIS PAGE
+        YOU DO NOT HAVE PERMISSION TO VIEW THIS PAGE <br>CONTACT IT STAFF OR YOUR HEAD OF DEPARTMENT FOR DETAILS!
     </p>
     <a href="{% url 'index' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-emerald-600 hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500">
-      Return to Home
+      GO TO HOMEPAGE
   </a>
   </div>
 {% endblock %}
