--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -30,17 +30,16 @@
                     </a>
                 </div>
 
+                {%if request.user.is_superuser %}
                 <div class="mt-4 p-2">
-
                     <a href="{% url 'worth' %}" class="w-full md:w-auto uppercase">
                         <div class="bg-emerald-600 hover:bg-white hover:text-emerald-700 hover:border hover:border-emerald-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <span class="mr-2 text-xl">&#x20A6;</span>
                             <span class="text-xs">Pharmacy Worth</span>
                         </div>
                     </a>                   
-
                 </div>
-
+                {%endif%}
             </div>
         </div>
     </div>
