zagros mountains, production ready, bugs fixed

--- a/store/templates/store/main_store_value.html
+++ b/store/templates/store/main_store_value.html
@@ -5,7 +5,7 @@
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
     <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
-<h1 class="text-xl md:text-2xl text-cyan-800 text-center uppercase">MAIN STORE VALUE</h1>
+<h1 class="text-xl md:text-2xl text-cyan-800 text-center uppercase">MAIN STORE STOCK VALUE</h1>
 </span>
 <div class="w-fit mx-auto px-4 sm:px-6 lg:px-16 py-8 uppercase">
         <div class="bg-gradient-to-r from-cyan-600 to-emerald-700 p-8 border-b-2 rounded-2xl">
