--- a/store/templates/store/expiry_notification.html
+++ b/store/templates/store/expiry_notification.html
@@ -91,12 +91,20 @@
         </p>
         <div class="flex space-x-2">
             {% if page_obj.has_previous %}
-                <a href="?page=1" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">First</a>
-                <a href="?page={{ page_obj.previous_page_number }}" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">Previous</a>
+                <a href="?page=1" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">
+                    <i class="fas fa-angle-double-left"></i>
+                    </a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">
+                <i class="fas fa-angle-left"></i>
+                    </a>
             {% endif %}
             {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">Next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">Last</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">
+                    <i class="fas fa-angle-right"></i>
+                    </a>
+                <a href="?page={{ page_obj.paginator.num_pages }}" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 text-sm font-medium rounded-md hover:bg-gray-50">
+                <i class="fas fa-angle-double-right"></i>
+                    </a>
             {% endif %}
         </div>
     </div>
