--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -11,10 +11,10 @@
     </span>
     <div class="flex flex-wrap justify-center items-center m-2 space-x-2 gap-2">
         <a href="{% url 'create_drug' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
-            <i class="fas fa-plus mr-2"></i> Add Drug
+            <i class="fas fa-plus fa-2xl mr-2"></i> Add Drug
         </a>
         <a href="{% url 'drug_report' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
-            <i class="fas fa-file mr-2"></i> Generate Report
+            <i class="fas fa-file-pdf fa-2xl mr-2"></i> Generate Report
         </a>
         <!-- Search Form -->
         <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
