--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -10,10 +10,10 @@
     </span>
     <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'create_record' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
-                <i class="fas fa-plus mr-2"></i> New Record
+                <i class="fas fa-plus fa-2xl mr-2"></i> New Record
             </a>
             <a href="{% url 'record_report' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
-                <i class="fas fa-file mr-2"></i> Generate Report
+                <i class="fas fa-file-pdf fa-2xl mr-2"></i> Generate Report
             </a>
     </div>
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
