--- a/store/templates/store/restocked_list.html
+++ b/store/templates/store/restocked_list.html
@@ -12,10 +12,10 @@
 </span>
     <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'restock_drugs' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                <i class="fas fa-plus mr-2"></i> Restock
+                <i class="fas fa-plus mr-2 fa-2xl"></i> Restock
             </a>
             <a href="{% url 'restock_report' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                <i class="fas fa-file mr-2"></i> Generate Report
+                <i class="fas fa-file-pdf fa-2xl mr-2"></i> Generate Report
             </a>
     </div>
 
