--- a/store/templates/store/unit_transfer.html
+++ b/store/templates/store/unit_transfer.html
@@ -12,6 +12,11 @@
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-stone-500">
             <i class="fas fa-plus mr-2"></i> transfer
             </a>
+            <a href="{% url 'transfer_report' store.pk %}"
+            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                <i class="fas fa-file-pdf mr-2 fa-2xl"></i> Transfer Report
+                </a>
+    
             </div>
         <!-- Unit Issue Records Table -->
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
