--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -21,18 +21,18 @@
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-amber-400">
                     <tr>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Date Issued</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Strength</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">QTY</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Update</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Date Issued</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Strength</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">QTY</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">edit</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
