--- a/store/templates/store/transfer_report.html
+++ b/store/templates/store/transfer_report.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
-    <a href="{%url 'unit_bulk_locker' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>    
+    <a href="{%url 'unit_transfer' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>    
 <h1 class="text-lg text-blue-800 text-center uppercase">{{unit.name}} Drug Transfer Report</h1>
 </span>
 <div class="max-w-7xl mx-auto px-4 ">
