--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -18,7 +18,7 @@
             <div>
             <a href="{% url 'dispensary_record' store.id%}"
             class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
-            <i class="fas fa-prescription-bottle-medical mr-2 fa-2xl"></i> send to dispensary
+            <i class="fas fa-prescription-bottle-medical mr-2 fa-2xl"></i> Send to Dispensary
             </a>
             <a href="{% url 'unitissue_report' store.id %}"
             class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
