--- a/store/templates/store/unit_transfer.html
+++ b/store/templates/store/unit_transfer.html
@@ -10,7 +10,7 @@
         <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'unit_issue_record_create' store.id %}"
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-stone-500">
-            <i class="fas fa-plus mr-2"></i> transfer
+            <i class="fas fa-plus mr-2"></i> Transfer
             </a>
             <a href="{% url 'transfer_report' store.pk %}"
             class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
